[I] 2C - Gauss distribution normalization

--- a/I_preprocessing/step1.ipynb
+++ b/I_preprocessing/step1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,19 +332,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### B - Hot-encoding categorial variables"
+    "### B - One Hot-encoding categorial variables"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### hot-encoding is chosen rather than ordinal encoding, there is no hierarchy between data (e.g health and overweight may be interpreted as such, but we cannot say an Obese is hierarchically higher than a healthy or underweight person, it's hierarchy-independant, well it's better to be healthy but mathematically irrelevant)"
+    "#### one hot-encoding is chosen rather than ordinal encoding, there is no hierarchy between data (e.g health and overweight may be interpreted as such, but we cannot say an Obese is hierarchically higher than a healthy or underweight person, it's hierarchy-independant, well it's better to be healthy but mathematically irrelevant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -534,56 +534,27 @@
       "Inhibited                             6.912959e+00\n",
       "Social_reactivity                     1.981953e+01\n",
       "Self_esteem                           5.730043e+01\n",
-      "Sensitivity_to_punishment_reward      1.000000e+10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_13612/2121868247.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  normality_df_cleaned['statistic_norm'] = (normality_df_cleaned['statistic'] - normality_df_cleaned['statistic'].min()) / \\\n",
-      "/tmp/ipykernel_13612/2121868247.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  normality_df_cleaned['p_value_norm'] = (normality_df_cleaned['p_value'] - normality_df_cleaned['p_value'].min()) / \\\n",
-      "/tmp/ipykernel_13612/2121868247.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  normality_df_cleaned['indicative_value'] = normality_df_cleaned['p_value_norm'] / normality_df_cleaned['statistic_norm']\n",
-      "/tmp/ipykernel_13612/2121868247.py:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  normality_df_cleaned['indicative_value'] = normality_df_cleaned.apply(lambda row: min(row['indicative_value'], max_limit) if np.isfinite(row['indicative_value']) else max_limit, axis=1)\n"
+      "Aggressive                           1.797693e+308\n",
+      "Friend_behavior                      1.797693e+308\n",
+      "Sensitivity_to_punishment_reward     1.797693e+308\n",
+      "appt1_breathalyzer                   1.797693e+308\n"
      ]
     }
    ],
    "source": [
-    "# Exclude columns with NaN values in 'statistic' and 'p_value'\n",
-    "normality_df_cleaned = normality_df.dropna(subset=['statistic', 'p_value'])\n",
+    "# Create a copy of normality_df\n",
+    "normality_df_cleaned = normality_df.copy()\n",
     "\n",
     "# Normalize the 'statistic' and 'p_value' columns to be between 0 and 1\n",
-    "normality_df_cleaned['statistic_norm'] = (normality_df_cleaned['statistic'] - normality_df_cleaned['statistic'].min()) / \\\n",
-    "                                         (normality_df_cleaned['statistic'].max() - normality_df_cleaned['statistic'].min())\n",
-    "normality_df_cleaned['p_value_norm'] = (normality_df_cleaned['p_value'] - normality_df_cleaned['p_value'].min()) / \\\n",
-    "                                       (normality_df_cleaned['p_value'].max() - normality_df_cleaned['p_value'].min())\n",
+    "normality_df_cleaned['statistic_norm'] = (normality_df_cleaned['statistic'] - normality_df_cleaned['statistic'].min()) / (normality_df_cleaned['statistic'].max() - normality_df_cleaned['statistic'].min())\n",
+    "normality_df_cleaned['p_value_norm'] = (normality_df_cleaned['p_value'] - normality_df_cleaned['p_value'].min()) / (normality_df_cleaned['p_value'].max() - normality_df_cleaned['p_value'].min())\n",
     "\n",
     "# Calculate the indicative value for each column\n",
     "normality_df_cleaned['indicative_value'] = normality_df_cleaned['p_value_norm'] / normality_df_cleaned['statistic_norm']\n",
     "\n",
-    "# Set a maximum limit for indicative values to handle extreme cases\n",
-    "max_limit = 1e+10  # Adjust this limit as needed\n",
-    "normality_df_cleaned['indicative_value'] = normality_df_cleaned.apply(lambda row: min(row['indicative_value'], max_limit) if np.isfinite(row['indicative_value']) else max_limit, axis=1)\n",
+    "# Apply the limit to 'indicative_value'\n",
+    "max_limit = np.finfo(np.float64).max\n",
+    "normality_df_cleaned['indicative_value'] = normality_df_cleaned['indicative_value'].apply(lambda x: min(x, max_limit) if np.isfinite(x) else max_limit)\n",
     "\n",
     "# Sort the DataFrame based on 'indicative_value' from lowest to highest\n",
     "normality_df_sorted = normality_df_cleaned.sort_values(by='indicative_value', ascending=True)\n",
@@ -633,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +619,7 @@
     }
    ],
    "source": [
-    "# Assuming 'combined_df' is already defined and contains the real data\n",
+    "# 'combined_df' is already defined and contains the real data\n",
     "# Variables to check for Q-Q plot\n",
     "variables = [\"Childhood_trauma\", \"deception\", \"ios_f\", \"7_up_7_down\", \n",
     "             \"Inhibited\", \"Social_reactivity\", \"Self_esteem\", \n",
@@ -669,7 +640,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Observations : the four graphs below are considered Gaussian by our previous analysis. We find a strong correlation between points and the line, we also see data is distributed evenly - or follow the line. From bottom right, to upper left, each figure is less accurate than the previous one. We can see a gradual decrease in quality, with ios_f, deception, childhood trauma being negative numbers in our previous formula. We can see similar patterns, but way more deviation from the line, and erratic points that do not align at all with the line, so the Gauss distribution will be less accurate to the point of confusing the machine learning model. "
+    "##### Observations : the four graphs below are considered Gaussian by our previous analysis. We observe a very strong relationship between the line and dots placement. 4 graphs below + the upper-right are all considered suitable, dots follow the trend, so it confirms our previous hypothesis. childhood_trauma, deception, ios_f do not follow evenly the line, and have a lot of dots far away from it. For example, self_esteem and ios_f appear to display similar patterns. However, self_esteem line follows evenly and perfectly dots placement, while ios_f have dots completely out, and even though 2 clusters are distributed evenly, other dots clusters do not follow the line, or are far away from it. A Machine Learning algorithm would train on all dots' clusters, the result would be highly biased by this strong disparity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Applying Gaussian distribution normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  participant_id appt1_drugtest  appt1_breathalyzer  deception  \\\n",
+      "0       sub-1001       negative                 0.0         10   \n",
+      "1       sub-1002       negative                 0.0          6   \n",
+      "2       sub-1003       negative                 0.0          5   \n",
+      "3       sub-1004       negative                 0.0          3   \n",
+      "4       sub-1006       negative                 0.0          1   \n",
+      "\n",
+      "   screen_meds_pastmonth  ios_f  juvenile_drug_alcohol_use  Alcohol_use  \\\n",
+      "0                    1.0    5.0                        0.0          6.0   \n",
+      "1                    0.0    5.0                        4.0          0.0   \n",
+      "2                    0.0    4.0                        1.0          5.0   \n",
+      "3                    0.0    3.0                        3.0          4.0   \n",
+      "4                    0.0    4.0                        3.0          1.0   \n",
+      "\n",
+      "   Mania_Scale  Autism_Quotient  ...  handedness_Right  screen_race_Asian  \\\n",
+      "0          2.0            165.0  ...             False              False   \n",
+      "1          0.0            191.0  ...              True              False   \n",
+      "2          1.0            166.0  ...              True              False   \n",
+      "3          4.0            141.0  ...              True              False   \n",
+      "4          2.0            151.0  ...              True              False   \n",
+      "\n",
+      "   screen_race_Black/African American  screen_race_Two or more races  \\\n",
+      "0                               False                           True   \n",
+      "1                               False                          False   \n",
+      "2                                True                          False   \n",
+      "3                               False                           True   \n",
+      "4                               False                          False   \n",
+      "\n",
+      "   screen_race_White  7_up_7_down_transformed  Inhibited_transformed  \\\n",
+      "0              False                 5.680725             105.957237   \n",
+      "1               True                 1.312382              87.595654   \n",
+      "2              False                 1.737811             104.101393   \n",
+      "3              False                 0.000000              93.056907   \n",
+      "4               True                 0.774534              91.231819   \n",
+      "\n",
+      "   Social_reactivity_transformed  Self_esteem_transformed  \\\n",
+      "0                      25.440797                 4.409477   \n",
+      "1                      22.197491                 4.491129   \n",
+      "2                      30.867247                 4.570123   \n",
+      "3                      12.540641                 4.646649   \n",
+      "4                      23.277448                 4.646649   \n",
+      "\n",
+      "   Sensitivity_to_punishment_reward_transformed  \n",
+      "0                                     28.092485  \n",
+      "1                                     36.129620  \n",
+      "2                                     23.070730  \n",
+      "3                                     19.054316  \n",
+      "4                                     27.088035  \n",
+      "\n",
+      "[5 rows x 51 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Box-Cox Transformation that handles zero values\n",
+    "def box_cox_transform_with_zeros(data):\n",
+    "    # Add a small constant to shift all values to be positive\n",
+    "    shifted_data = data + 1\n",
+    "    transformed_data, _ = stats.boxcox(shifted_data)\n",
+    "    return transformed_data\n",
+    "\n",
+    "# Apply Box-Cox transformation with zero handling to the specified columns\n",
+    "transformed_columns = [\"7_up_7_down\", \"Inhibited\", \"Social_reactivity\", \"Self_esteem\", \"Sensitivity_to_punishment_reward\"]\n",
+    "for col in transformed_columns:\n",
+    "    combined_df[col + '_transformed'] = box_cox_transform_with_zeros(combined_df[col])\n",
+    "\n",
+    "# Display the first few rows of the transformed DataFrame\n",
+    "print(combined_df.head())"
    ]
   }
  ],
