--- a/I_preprocessing/step1.ipynb
+++ b/I_preprocessing/step1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
     "    combined_df[column] = combined_df[column].astype(int)\n",
     "\n",
     "# Verify the changes\n",
-    "print(combined_df[columns_to_convert].head())"
+    "#print(combined_df[columns_to_convert].head())"
    ]
   },
   {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
     "# Apply Box-Cox transformation with small constant handling to the specified columns\n",
     "transformed_columns = [\"7_up_7_down\", \"Inhibited\", \"Social_reactivity\", \"Self_esteem\", \"Sensitivity_to_punishment_reward\"]\n",
     "for col in transformed_columns:\n",
-    "    combined_df[col + '_transformed'] = box_cox_transform_with_small_constant(combined_df[col])\n",
+    "    combined_df[col] = box_cox_transform_with_small_constant(combined_df[col])\n",
     "\n",
     "# Display the first few rows of the transformed DataFrame\n",
     "#print(combined_df.head())"
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -808,19 +808,19 @@
       "3       sub-1004       negative                 0.0                    0.0   \n",
       "4       sub-1006       negative                 0.0                    0.0   \n",
       "\n",
-      "   Inhibited  Aggressive  Stranger_behavior  Social_reactivity  Self_esteem  \\\n",
-      "0       65.0         0.0                0.0               24.0         22.0   \n",
-      "1       55.0         0.0                0.0               21.0         23.0   \n",
-      "2       64.0         0.0                0.0               29.0         24.0   \n",
-      "3       58.0         0.0                0.0               12.0         25.0   \n",
-      "4       57.0         0.0                0.0               22.0         25.0   \n",
+      "    Inhibited  Aggressive  Stranger_behavior  Social_reactivity  Self_esteem  \\\n",
+      "0  103.781196         0.0                0.0           7.700590     4.578796   \n",
+      "1   85.533593         0.0                0.0           7.080091     4.672498   \n",
+      "2  101.936676         0.0                0.0           8.653072     4.763151   \n",
+      "3   90.960451         0.0                0.0           4.882019     4.850975   \n",
+      "4   89.146806         0.0                0.0           7.291635     4.850975   \n",
       "\n",
       "   Sensitivity_to_punishment_reward  ...  Childhood_trauma_transformed  \\\n",
-      "0                              28.0  ...                      0.413793   \n",
-      "1                              36.0  ...                      0.000000   \n",
-      "2                              23.0  ...                      0.362069   \n",
-      "3                              19.0  ...                      0.387931   \n",
-      "4                              27.0  ...                      0.870690   \n",
+      "0                         26.885529  ...                      0.413793   \n",
+      "1                         34.837724  ...                      0.000000   \n",
+      "2                         21.913463  ...                      0.362069   \n",
+      "3                         17.934473  ...                      0.387931   \n",
+      "4                         25.891249  ...                      0.870690   \n",
       "\n",
       "   Drug_Use_transformed  PC_use_transformed  Friend_behavior_transformed  \\\n",
       "0                   0.0            0.534483                     0.525862   \n",
@@ -850,7 +850,7 @@
       "3                       0.732759                            0.396552  \n",
       "4                       0.103448                            0.913793  \n",
       "\n",
-      "[5 rows x 50 columns]\n"
+      "[5 rows x 45 columns]\n"
      ]
     }
    ],
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
