[II] Connecting to Spark instance

--- a/II_deeplearning/step2.ipynb
+++ b/II_deeplearning/step2.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deep Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Utilizing Apache Spark and PySpark for Deep Learning in Neuroimaging Studies\n",
+    "\n",
+    "## Why Spark?\n",
+    "\n",
+    "- **Efficient Large Data Handling:**\n",
+    "   - Spark is designed for fast computation and handling big datasets, essential for neuroimaging data.\n",
+    "\n",
+    "- **PySpark - Python Integration:**\n",
+    "   - PySpark provides a Python interface to Spark, making it easier to implement deep learning algorithms using Python libraries.\n",
+    "\n",
+    "- **Distributed Computing:**\n",
+    "   - Spark's distributed nature allows for parallel processing, speeding up the deep learning tasks.\n",
+    "\n",
+    "- **MLlib for Machine Learning:**\n",
+    "   - Spark's MLlib offers machine learning algorithms optimized for big data, which we can leverage for our deep learning models.\n",
+    "\n",
+    "## Advantages:\n",
+    "\n",
+    "- Spark handles our complex and large participant data efficiently.\n",
+    "- PySpark allows seamless integration with Python's deep learning libraries.\n",
+    "- Distributed processing capability accelerates our deep learning computations.\n",
+    "- Scalability ensures that our system can grow with our data needs.\n",
+    "\n",
+    "In summary, Apache Spark and PySpark provide a robust, scalable, and efficient platform for deep learning in our neuroimaging study, enabling us to process large datasets with speed and ease.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -11,14 +48,38 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/01/31 07:17:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/01/31 07:17:32 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "24/01/31 14:47:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/01/31 14:47:01 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "spark = SparkSession.builder.master(\"local[*]\").appName(\"PySpark_VSCode\").getOrCreate()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-31 14:47:01.669109: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-01-31 14:47:01.743298: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-01-31 14:47:01.743334: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-01-31 14:47:01.754796: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-01-31 14:47:01.781649: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-01-31 14:47:02.167780: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import models"
    ]
   }
  ],
