--- a/I_preprocessing/step1.ipynb
+++ b/I_preprocessing/step1.ipynb
@@ -9,9 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_613955/2483371633.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -48,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
