--- a/II_deeplearning/step2.ipynb
+++ b/II_deeplearning/step2.ipynb
@@ -38,6 +38,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 - Setting up Spark cluster"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -78,8 +85,79 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras import models"
+    "from tensorflow.keras import models\n",
+    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout, Input\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_df = pd.read_csv('/home/skander/combined.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Set 'participant_id' as index\n",
+    "combined_df_with_index = combined_df.set_index('participant_id')\n",
+    "\n",
+    "# Extract features for pattern discovery\n",
+    "features = combined_df_with_index  # All columns except 'participant_id'\n",
+    "\n",
+    "# Now features DataFrame is ready for unsupervised learning techniques\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 - Neuron layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjust the input dimension to match the number of features in your dataset\n",
+    "input_dim = features.shape[41]  # Number of features\n",
+    "\n",
+    "# Define the size of the encoded representations\n",
+    "encoding_dim = 32  # You can experiment with this value\n",
+    "\n",
+    "# Input layer\n",
+    "input_layer = Input(shape=(input_dim,))\n",
+    "\n",
+    "# Encoded layer - where the data is compressed\n",
+    "encoded = Dense(encoding_dim, activation='relu')(input_layer)\n",
+    "\n",
+    "# Decoded layer - reconstruction of the input\n",
+    "decoded = Dense(input_dim, activation='sigmoid')(encoded)\n",
+    "\n",
+    "# Autoencoder model\n",
+    "autoencoder = Model(input_layer, decoded)\n",
+    "\n",
+    "# Compile the model\n",
+    "autoencoder.compile(optimizer='adam', loss='binary_crossentropy')\n",
+    "\n",
+    "# Train the autoencoder\n",
+    "autoencoder.fit(features, features,  # Input and output are the same for an autoencoder\n",
+    "                epochs=50,          # Number of epochs\n",
+    "                batch_size=256,     # Batch size\n",
+    "                shuffle=True)       # Shuffle the data"
    ]
   }
  ],
