[II] binary crossentropy showing inconsistencies - known possible causes

--- a/II_deeplearning/step2.ipynb
+++ b/II_deeplearning/step2.ipynb
@@ -46,20 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/01/31 14:47:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/01/31 14:47:01 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "spark = SparkSession.builder.master(\"local[*]\").appName(\"PySpark_VSCode\").getOrCreate()\n"
@@ -67,23 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-01-31 14:47:01.669109: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-01-31 14:47:01.743298: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-01-31 14:47:01.743334: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-01-31 14:47:01.754796: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-01-31 14:47:01.781649: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-31 14:47:02.167780: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from tensorflow import keras\n",
@@ -95,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,15 +103,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-01 09:00:40.486215: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-02-01 09:00:40.585502: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2256] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 207ms/step - loss: 3.8192\n",
+      "Epoch 2/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: 2.1674\n",
+      "Epoch 3/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: 0.5199\n",
+      "Epoch 4/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -1.1258\n",
+      "Epoch 5/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -2.7679\n",
+      "Epoch 6/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -4.4042\n",
+      "Epoch 7/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -6.0364\n",
+      "Epoch 8/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -7.6663\n",
+      "Epoch 9/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -9.2947\n",
+      "Epoch 10/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -10.9216\n",
+      "Epoch 11/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -12.5484\n",
+      "Epoch 12/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -14.1733\n",
+      "Epoch 13/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -15.7979\n",
+      "Epoch 14/50\n",
+      "1/1 [==============================] - 0s 992us/step - loss: -17.4235\n",
+      "Epoch 15/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -19.0468\n",
+      "Epoch 16/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -20.6697\n",
+      "Epoch 17/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -22.2937\n",
+      "Epoch 18/50\n",
+      "1/1 [==============================] - 0s 1000us/step - loss: -23.9198\n",
+      "Epoch 19/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -25.5493\n",
+      "Epoch 20/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -27.1805\n",
+      "Epoch 21/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -28.8140\n",
+      "Epoch 22/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -30.4513\n",
+      "Epoch 23/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -32.0910\n",
+      "Epoch 24/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -33.7341\n",
+      "Epoch 25/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -35.3805\n",
+      "Epoch 26/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -37.0299\n",
+      "Epoch 27/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -38.6838\n",
+      "Epoch 28/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -40.3427\n",
+      "Epoch 29/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -42.0066\n",
+      "Epoch 30/50\n",
+      "1/1 [==============================] - 0s 990us/step - loss: -43.6748\n",
+      "Epoch 31/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -45.3486\n",
+      "Epoch 32/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -47.0289\n",
+      "Epoch 33/50\n",
+      "1/1 [==============================] - 0s 3ms/step - loss: -48.7156\n",
+      "Epoch 34/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -50.4091\n",
+      "Epoch 35/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -52.1075\n",
+      "Epoch 36/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -53.8129\n",
+      "Epoch 37/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -55.5253\n",
+      "Epoch 38/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -57.2442\n",
+      "Epoch 39/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -58.9697\n",
+      "Epoch 40/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -60.7035\n",
+      "Epoch 41/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -62.4459\n",
+      "Epoch 42/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -64.1968\n",
+      "Epoch 43/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -65.9549\n",
+      "Epoch 44/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -67.7201\n",
+      "Epoch 45/50\n",
+      "1/1 [==============================] - 0s 2ms/step - loss: -69.4940\n",
+      "Epoch 46/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -71.2777\n",
+      "Epoch 47/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -73.0713\n",
+      "Epoch 48/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -74.8744\n",
+      "Epoch 49/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -76.6869\n",
+      "Epoch 50/50\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: -78.5089\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x7fed042e5d20>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Adjust the input dimension to match the number of features in your dataset\n",
-    "input_dim = features.shape[41]  # Number of features\n",
+    "input_dim = features.shape[1]  # Number of features\n",
     "\n",
     "# Define the size of the encoded representations\n",
-    "encoding_dim = 32  # You can experiment with this value\n",
+    "encoding_dim = 32  # experiment with this value\n",
     "\n",
     "# Input layer\n",
     "input_layer = Input(shape=(input_dim,))\n",
