[II] 2 - adapting data in [I] and try

--- a/I_preprocessing/step1.ipynb
+++ b/I_preprocessing/step1.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_613955/2483371633.py:1: DeprecationWarning: \n",
+      "/tmp/ipykernel_370861/2296345918.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -37,7 +37,9 @@
     "import seaborn as sns\n",
     "from scipy.stats import normaltest\n",
     "import scipy.stats as stats\n",
-    "from sklearn.preprocessing import QuantileTransformer\n"
+    "from sklearn.preprocessing import QuantileTransformer\n",
+    "from sklearn.preprocessing import RobustScaler, MinMaxScaler\n",
+    "from sklearn.pipeline import Pipeline\n"
    ]
   },
   {
@@ -926,12 +928,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We want to avoid overfitting and confuse the model, thus we decide as last step to use 3 decimal as a balance for precision but not overprecision"
+    "#### [EDIT] for further analyses, the use of binary crossentropy for deep learning conflicts with that data. Solution proposed : RobustScaler followed by a MinMaxScaler in a pipeline. This combination can help in retaining the Gaussian characteristics while also ensuring the data is scaled between 0 and 1.\n",
+    "\n",
+    "#### RobustScaler: This scaler removes the median and scales the data according to the quantile range (by default, IQR: Interquartile Range). It's robust to outliers, meaning it can help in maintaining the Gaussian shape of the distribution even if the data contains outliers.\n",
+    "\n",
+    "### MinMaxScaler: After using RobustScaler, the MinMaxScaler can scale the data to the desired range of 0 to 1. This ensures that all features contribute equally to the model's performance without distorting the relative Gaussian distribution shapes."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a pipeline that first applies RobustScaler and then MinMaxScaler\n",
+    "pipeline = Pipeline(steps=[('robust', RobustScaler()), ('minmax', MinMaxScaler())])\n",
+    "\n",
+    "# Columns you wish to scale while preserving Gaussian nature\n",
+    "columns_to_scale = [\"Inhibited\", \"Self_esteem\", \"Sensitivity_to_punishment_reward\"]\n",
+    "\n",
+    "# Apply the pipeline to each column\n",
+    "for col in columns_to_scale:\n",
+    "    combined_df[col] = pipeline.fit_transform(combined_df[[col]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We want to avoid overfitting and confuse the model, thus we decide as last step to use 3 decimal as a balance for precision but not overprecision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
